agrego datos personales

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
+* {
+    margin: 0;
+    border: 0;
+    padding: 0;
+}
 
 body {
-    background-color: palegoldenrod;
+    background-color: rgb(192, 204, 235);
 }
 
 .body-portafolio {
@@ -11,6 +16,8 @@ h1 {
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: green;
+    font-size: 2em;
+    font-style: oblique;
  }
 
  .nav-link {
