--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,18 @@
-* {
-    margin: 0;
-    border: 0;
-    padding: 0;
-}
 
- body {
+body {
     background-color: rgb(192, 204, 235);
-}
-
-.body-portafolio {
-    background-color: rgb(180, 67, 30);
-}
+   
+ }
 
 h1 {
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color:#2E4A62;
     font-size: 2em;
-    font-style: oblique;
- }
+    }
 
  .nav-link {
-    color: purple;
+    color: rgb(63, 72, 173);
  }
 h3 {
     color:rgb(45, 45, 111);
