--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,5 +24,6 @@ h3 {
     text-align: center;
     padding: 2em;
     border: 1em;
-    margin: 100%;
+    margin: 0.1em;
+    font-weight:500 ;
  }
